--- a/chatClient/pom.xml
+++ b/chatClient/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>chat</artifactId>
         <groupId>com.sd</groupId>
-        <version>1.0-SNAPSHOT</version>
+        <version>1.2</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -15,7 +15,7 @@
         <dependency>
             <groupId>com.sd</groupId>
             <artifactId>commons</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>1.2</version>
         </dependency>
     </dependencies>
 
@@ -29,7 +29,7 @@
                 <configuration>
                     <archive>
                         <manifest>
-                            <mainClass>com.sd.client.Main</mainClass>
+                            <mainClass>com.sd.client.Client</mainClass>
                         </manifest>
                     </archive>
                     <descriptorRefs>
