--- a/chatServer/pom.xml
+++ b/chatServer/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>chat</artifactId>
         <groupId>com.sd</groupId>
-        <version>1.0-SNAPSHOT</version>
+        <version>1.2</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -15,7 +15,13 @@
         <dependency>
             <groupId>com.sd</groupId>
             <artifactId>commons</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>1.2</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/com.google.guava/guava -->
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>23.0</version>
         </dependency>
     </dependencies>
 
@@ -29,7 +35,7 @@
                 <configuration>
                     <archive>
                         <manifest>
-                            <mainClass>com.sd.server.Main</mainClass>
+                            <mainClass>com.sd.server.Server</mainClass>
                         </manifest>
                     </archive>
                     <descriptorRefs>
