--- a/commons/pom.xml
+++ b/commons/pom.xml
@@ -5,11 +5,9 @@
     <parent>
         <artifactId>chat</artifactId>
         <groupId>com.sd</groupId>
-        <version>1.0-SNAPSHOT</version>
+        <version>1.2</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>commons</artifactId>
-
-
 </project>
